2007-01-30  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>

PR c++/24745
	* doc/invoke.texi (Wpointer-arith): Document warning.

cp/
	* typeck.c (build_binary_op): Fix logic for warning. Move warning
	to -Wpointer-arith.
	* call.c (convert_like_real): Don't warn when converting to
	boolean type.

testsuite/
	* g++.dg/warn/null4.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@121361 138bc75d-0d04-0410-961f-82ee72b054a4